data/derived/fa15/progs/unify/prog3903.ml.out
Characters 71-85:
  let rec mulDigHelp i j l = if(i=0) then [0] else if(i = j) then l else mulDigHelp i j+1 (bigAdd l l);;
                                                                         ^^^^^^^^^^^^^^
Error: This expression has type int list -> int list
       but an expression was expected of type int
